<resources>
    <string name="app_name">Visto+</string>
    <string name="txt_label_campo_email">E-mail*</string>
    <string name="txt_hint_campo_email">Digite o e-mail...</string>
    <string name="txt_hint_campo_senha">Digite a senha...</string>
    <string name="txt_label_campo_senha">Senha*</string>
    <string name="txt_btn_entrar">Entrar</string>
    <string name="txt_titulo_tela_cadastro_veiculo">Cadastro de veiculos</string>
    <string name="txt_label_modelo_veiculo">Modelo do veículo*</string>
    <string name="txt_label_marca_veiculo">Marca*</string>
    <string name="txt_label_ano_lancamento_veiculo">Ano de lançamento*</string>
    <string name="txt_label_ano_modelo_veiculo">Ano do modelo do veiculo*</string>
    <string name="txt_titulo_tela_cadastro_proprietarios">Cadastro de proprietários</string>
    <string name="txt_label_nome_completo_proprietario">Nome completo*</string>
    <string name="txt_label_email_proprietario">E-mail*</string>
    <string name="txt_label_telefone_proprietario">Telefone*</string>
    <string name="txt_label_cpf_proprietario">CPF*</string>
    <string name="txt_label_rg_proprietario">RG*</string>
    <string name="txt_label_data_nascimento_proprietario">Data de nascimento*</string>
    <string name="txt_label_cnh_proprietario">Número da CNH*</string>
    <string name="txt_label_cep_proprietario">Cep*</string>
    <string name="txt_nao_existem_proprietarios_cadastrados">Não existem proprietários cadastrados na base de dados.</string>
    <string name="txt_btn_aplicar_filtro_proprietarios">Aplicar filtro</string>
    <string name="txt_btn_limpar_filtro_proprietarios">Limpar filtro</string>
    <string name="txt_label_categoria_veiculo">Categoria</string>
</resources>