<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CadastroProprietarioActivity"
    android:background="@color/cor_fundo_telas" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- menu do topo da tela -->
        <include layout="@layout/menu_topo" />

        <!-- nome completo do proprietário -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_label_nome_completo_proprietario"
            android:textColor="@color/principal"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp" />

        <EditText
            android:id="@+id/edt_nome_completo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="Diigte o nome completo do proprietário..."
            android:textSize="16sp"
            android:textColor="@color/black"
            android:inputType="textPersonName" />

        <!-- e-mail do proprietário -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_label_email_proprietario"
            android:textColor="@color/principal"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="Digite o e-mail..."
            android:textSize="16sp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress" />

        <!-- telefone do proprietário -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_label_telefone_proprietario"
            android:textColor="@color/principal"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/edt_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="Digite o telefone..."
            android:textSize="16sp"
            android:textColor="@color/black"
            android:inputType="phone" />

        <!-- cpf do proprietário -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_label_cpf_proprietario"
            android:textColor="@color/principal"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/edt_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="Digite o cpf..."
            android:textSize="16sp"
            android:textColor="@color/black"
            android:inputType="text" />

        <!-- rg do proprietário -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_label_rg_proprietario"
            android:textColor="@color/principal"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/edt_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="Digite o rg..."
            android:textSize="16sp"
            android:textColor="@color/black"
            android:inputType="text" />

        <!-- data de nascimento do proprietário -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_label_data_nascimento_proprietario"
            android:textColor="@color/principal"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/edt_data_nascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="Digite a data de nascimento..."
            android:textSize="16sp"
            android:textColor="@color/black"
            android:inputType="date" />

        <!-- numero da cnh do proprietário -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_label_cnh_proprietario"
            android:textColor="@color/principal"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/edt_numero_cnh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="Digite o número da cnh..."
            android:textSize="16sp"
            android:textColor="@color/black"
            android:inputType="text" />

        <!-- cep do endereço do proprietário -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_label_cep_proprietario"
            android:textColor="@color/principal"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/edt_cep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="Digite o cep somente com números..."
            android:textSize="16sp"
            android:textColor="@color/black"
            android:inputType="number" />

        <!-- botão de cadastrar/editar o proprietário -->
        <Button
            android:id="@+id/btn_salvar_proprietario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cadastrar"
            android:backgroundTint="@color/principal"
            android:padding="12dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:elevation="3dp"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>